test/fail/syntax_error/expected_type.amla
func add (x: int, y) int {
     return 1;
}